Fix: wrap object picker

--- a/src/App.css
+++ b/src/App.css
@@ -1146,6 +1146,7 @@ input::-webkit-input-placeholder {
 
 .cmp-object-picker {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.2rem;
   & svg {
     margin: 0.2rem;
